Tag: tags/2018-02-27
--------------------
- ZD-159: Show Custom Thumbnail Field in Custom Video Lists Doesn't Always Work

Tag: tags/2018-01-07-01
-----------------------
- ZD-68: Option to not crop and resize the image. (#8)

Tag: tags/2018-01-07
--------------------
- Added CMB Dropdown Menu module (Experimental)

Tag: tags/2018-01-05
--------------------
- Features cleanup 2018: Updated/Organized CMB Features Package Names (#9)

Tag: tags/2017-12-28
--------------------
- zd-159: Show Custom Thumbnail Field in Custom Video Lists Doesn't Always Work

Tag: tags/2017-12-17-01
--------------------
- removed foreign keys from features field bases

Tag: tags/2017-12-17
--------------------
- zd-74: Two and Four-Column Content Lists

Tag: tags/2017-12-13-01
--------------------
- zd-150: changes to cb recent news for spnn

Tag: tags/2017-12-13
--------------------
- zd-158: Blog and Basic Pages Cut Off in Legacy Mode

Tag: tags/2017-11-25-02
--------------------
- zd-143: Facebook OG Meta Tags for Show Content Type

Tag: tags/2017-11-25-01
--------------------
- Deleted bill-bash-test.txt test file

Tag: tags/2017-11-25
--------------------
- zd-142: Add Better Preview Display for Jumbotron Paragraphs

Tag: tags/2017-11-12-02
--------------------
- Updated and cleaned-up CMB Search features

Tag: tags/2017-11-12-01
--------------------
- re-tagging last release to trigger cmb deploy

Tag: tags/2017-11-12
--------------------
- Changed iframe video urls in project and partner TPLs to use SSL

Tag: tags/2017-10-09
--------------------
- zd-66: Blog Image Placement

Tag: tags/2017-10-03-01
--------------------
- zd-51: fix for cc_text_with_background css conflict with body background color

Tag: tags/2017-10-03
--------------------
- zd-51: Max Width Desired for CM Bootstrap Sites

Tag: tags/2017-09-27
--------------------
- zd-43: Images not displaying in Facebook
- zd-69: Content list description styling

Tag: tags/2017-09-23
--------------------