@@ -1,0 +1,65 @@
+<?php
+/**
+ * @file
+ * cmb_paragraphs_embed_features.features.field_instance.inc
+ */
+
+/**
+ * Implements hook_field_default_field_instances().
+ */
+function cmb_paragraphs_embed_features_field_default_field_instances() {
+  $field_instances = array();
+
+  // Exported field_instance:
+  // 'paragraphs_item-cmb_embed-field_cmb_p_embed_embed'.
+  $field_instances['paragraphs_item-cmb_embed-field_cmb_p_embed_embed'] = array(
+    'bundle' => 'cmb_embed',
+    'default_value' => NULL,
+    'deleted' => 0,
+    'description' => '',
+    'display' => array(
+      'default' => array(
+        'label' => 'above',
+        'module' => 'text',
+        'settings' => array(),
+        'type' => 'text_default',
+        'weight' => 0,
+      ),
+      'paragraphs_editor_preview' => array(
+        'label' => 'above',
+        'module' => 'text',
+        'settings' => array(),
+        'type' => 'text_plain',
+        'weight' => 0,
+      ),
+    ),
+    'entity_type' => 'paragraphs_item',
+    'field_name' => 'field_cmb_p_embed_embed',
+    'label' => 'Embed Code',
+    'required' => 0,
+    'settings' => array(
+      'linkit' => array(
+        'button_text' => 'Search',
+        'enable' => 0,
+        'profile' => '',
+      ),
+      'text_processing' => 0,
+      'user_register_form' => FALSE,
+    ),
+    'widget' => array(
+      'active' => 1,
+      'module' => 'text',
+      'settings' => array(
+        'rows' => 5,
+      ),
+      'type' => 'text_textarea',
+      'weight' => 0,
+    ),
+  );
+
+  // Translatables
+  // Included for use with string extractors like potx.
+  t('Embed Code');
+
+  return $field_instances;
+}
