@@ -1,0 +1,7 @@
+<?php if ($cmb_embed['embed']): ?>
+  <section class="content-component cmb-embed">
+    <div class="cmb--responsive-video-wrapper">
+      <?php print $cmb_embed['embed']; ?>
+    </div>
+  </section>
+<?php endif; ?>
